--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 21 11:20:46 ICT 2024
-sdk.dir=/Users/leson/Library/Android/sdk
+#Thu Sep 12 11:33:36 ICT 2024
+sdk.dir=F\:\\src\\flutter
